--- a/sass/theme/_buttons.scss
+++ b/sass/theme/_buttons.scss
@@ -1,35 +1,32 @@
 
 // Buttons
 .btn-ghost {
-    position: relative;
-    color: #FFF;
-    border: 1px solid #FFF;
-}
-
-.button.outline, 
-.button.outward {
-    position: relative;
-    color: #111;
-    border: 1px solid #111;
-    padding: 12px 20px;
-    margin-top: 50px;
     display: inline-block;
-    font-size: 1em;
+    position: relative;
+    background: transparent;
+    color: #FFF;
+    text-align: left;
+    padding: 12px 20px;
+    margin-top: 20px;
+    font-size: 12px;
+    border: 1px solid #FFF;
+    border-radius: 0;
     text-transform: uppercase;
     font-weight: 400;
-    border-radius: 3px;
-    -moz-transition: 150ms;
-    -o-transition: 150ms;
-    -webkit-transition: 150ms;
-    transition: 150ms;
-    text-decoration: none;
+    -moz-transition: 200ms;
+    -o-transition: 200ms;
+    -webkit-transition: 200ms;
+    transition: 200ms;
+    -moz-transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 .btn-ghost:hover {
     color: white;
     background-color: #111;
 }
 .btn-ghost:after {
-    //background: url(/wp-content/uploads/2016/12/arrow-right-black.png) no-repeat center center;
+    //background: url(http://cycat4.com/wp-content/uploads/2016/12/arrow-right-black-1.png) no-repeat center center;
     background-size: contain;
     font-family: fontawesome;
     width: 21px;
@@ -38,23 +35,6 @@
     content: "\f061";
     position: absolute;
     top: 10px;
-    right: 20px;
-}
-
-.button.outline:hover, 
-.button.outward:hover {
-    color: white;
-    background-color: #111;
-}
-
-.button.outline:after, .button.outward:after {
-    background: url(/wp-content/uploads/2016/10/arrow-right-black.png) no-repeat center center;
-    width: 21px;
-    height: 17px;
-    display: block;
-    content: "";
-    position: absolute;
-    top: 15px;
     right: -20px;
     opacity: 0;
     -moz-transition: 200ms;
@@ -65,8 +45,13 @@
     -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
 }
+
 .btn-ghost:hover:after {
-    color: #FFF;
+    color: #FFF;    
+    -moz-transform: translate3d(10px,0,0);
+    -webkit-transform: translate3d(10px,0,0);
+    transform: translate3d(10px,0,0);
+    opacity: 1;
 }
 
 .button.outline:hover:after, .button.outward:hover:after {
