added slider shadow

--- a/css/style.css
+++ b/css/style.css
@@ -8055,6 +8055,12 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%; }
 
 /* Home */
+.slider-shadow {
+  position: absolute;
+  top: 70vh;
+  width: 100%;
+  margin-left: -15px; }
+
 .bg-shape {
   position: absolute;
   left: 0;
@@ -8154,6 +8160,9 @@ h1, h2, h3, h4, h5, h6 {
     opacity: 1;
     z-index: 3;
     transition: all 0.1s ease-in-out; }
+    .welcome a.box .title.title--cap {
+      font-family: "Raleway", sans-serif !important;
+      text-transform: uppercase !important; }
   .welcome a.box:hover i {
     top: 40%;
     opacity: 1;
@@ -8182,8 +8191,11 @@ h1, h2, h3, h4, h5, h6 {
   padding: 45px 30px;
   margin-left: 0; }
   .welcome a.box--desc .box--desc__title {
-    font: 100 55px/50px "Raleway", sans-serif;
+    font: 900 55px/55px "Raleway", sans-serif;
     margin-bottom: 50px; }
+  @media (max-width: 991px) {
+    .welcome a.box--desc {
+      padding: 20px; } }
 
 .welcome a.box--video {
   overflow: hidden; }
@@ -8201,43 +8213,43 @@ h1, h2, h3, h4, h5, h6 {
   .welcome a.box--video:focus .shadow, .welcome a.box--video:active .shadow, .welcome a.box--video:visited .shadow {
     z-index: -1; }
 
-.welcome .box--upcoming {
+.box--upcoming {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/14445026_1216046245105621_3306610808690776345_o.jpg); }
 
-.welcome .box--youtube {
+.box--youtube {
   background-image: url(); }
 
-.welcome .box--toys {
+.box--toys {
   background-image: url(/wp-content/uploads/2016/12/IMG_0770-1.jpg); }
 
-.welcome .box--play {
+.box--play {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/10357639_746169108760006_3475882466858522686_o.jpg); }
 
-.welcome .box--mini {
+.box--mini {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/10333777_736341299742787_1396436187858928254_o.jpg); }
 
-.welcome .box--camp {
+.box--camp {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/26.jpg); }
 
-.welcome .box--hiking {
+.box--hiking {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/12080222_988062094570705_1048278132340532445_o.jpg); }
 
-.welcome .box--amen {
+.box--amen {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/554316_408124662564454_1853705012_n.jpg); }
 
-.welcome .box--bag {
+.box--bag {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/481262_408126025897651_211010353_n.jpg); }
 
-.welcome .box--paint {
+.box--paint {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/479702_408126822564238_590652088_n.jpg); }
 
-.welcome .box--pool {
+.box--pool {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/547529_408142449229342_1533011197_n.jpg); }
 
-.welcome .box--near {
+.box--near {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/monticello.jpg); }
 
-.welcome .box--camp2 {
+.box--camp2 {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/255146_203987516311504_746475_n.jpg); }
 
 .pw--home-testi {
